--- a/index.html
+++ b/index.html
@@ -544,19 +544,21 @@
 <img data-src="index_files/figure-revealjs/unnamed-chunk-11-1.png" style="width:90.0%" class="r-stretch"></section>
 <section id="components-of-a-plot-2" class="slide level2">
 <h2>Components of a Plot</h2>
+<div>
 <ul>
-<li><p>The data for the plot comes from the <strong>emergency</strong> dataset</p></li>
-<li><p>The plot contains a x and y coordinate system</p>
+<li class="fragment"><p>The data for the plot comes from the <strong>emergency</strong> dataset</p></li>
+<li class="fragment"><p>The plot contains a x and y coordinate system</p>
 <ul>
-<li>A categorical X describing <strong>gender</strong> (Male, Female)</li>
-<li>A numeric Y describing the <strong>age</strong></li>
+<li class="fragment">A categorical X describing <strong>gender</strong> (Male, Female)</li>
+<li class="fragment">A numeric Y describing the <strong>age</strong></li>
 </ul></li>
-<li><p>The plot contains a color</p>
+<li class="fragment"><p>The plot contains a color</p>
 <ul>
-<li>The color differs by <strong>gender</strong></li>
+<li class="fragment">The color differs by <strong>gender</strong></li>
 </ul></li>
-<li><p>The plot is being depicted using a <strong>dotplot</strong> (geometries)</p></li>
+<li class="fragment"><p>The plot is being depicted using a <strong>dotplot</strong> (geometries)</p></li>
 </ul>
+</div>
 </section>
 <section id="the-grammar-of-graphics" class="slide level2 smaller">
 <h2>The Grammar of Graphics</h2>
@@ -694,7 +696,7 @@
 
 <aside><div>
 <ul>
-<li>https://ggplot2.tidyverse.org/</li>
+<li><a href="https://ggplot2.tidyverse.org/" class="uri">https://ggplot2.tidyverse.org/</a></li>
 </ul>
 </div></aside></section>
 <section id="cheatsheet" class="slide level2">
@@ -711,7 +713,7 @@
 
 <aside><div>
 <ul>
-<li>https://github.com/rstudio/cheatsheets/blob/master/data-visualization-2.1.pdf</li>
+<li><a href="https://www.rstudio.com/resources/cheatsheets/" class="uri">https://www.rstudio.com/resources/cheatsheets/</a></li>
 </ul>
 </div></aside></section>
 <section id="book" class="slide level2">
@@ -731,7 +733,7 @@
 </div>
 <aside><div>
 <ul>
-<li>https://ggplot2-book.org/index.html</li>
+<li><a href="https://ggplot2-book.org/index.html" class="uri">https://ggplot2-book.org/index.html</a></li>
 </ul>
 </div></aside></section></section>
     </div>
@@ -760,7 +762,7 @@
       // https://revealjs.com/config/
       Reveal.initialize({
 'controlsAuto': true,
-'previewLinksAuto': false,
+'previewLinksAuto': true,
 'smaller': false,
 'pdfSeparateFragments': false,
 'autoAnimateEasing': "ease",
